# obsidian-graph-analysis

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  copy-to-vault.mjs  esbuild.config.mjs  eslint.config.mjs  graph_analysis_wasm.js  manifest.json  package-lock.json  package.json  project-plan.md  styles.css  test.html  tsconfig.eslint.json  tsconfig.json  versions.json
.cursor/rules/: .cursorrules
.github/workflows/: build.yml  ci.yml  release.yml
config/: .eslintrc
docs/: D3-graph-example.md  UI-design.md  gemini-thinking.md  migrate-to-pixi.md  performance-optimizations.md  project-plan.md  publishing.md  security-and-privacy.md  sharedarraybuffer-fix.md  submit-to-obsidian.md
graph-analysis-wasm/: .gitignore  Cargo.toml  LICENSE  README.md
graph-analysis-wasm/src/: api.rs  graph_manager.rs  lib.rs  models.rs  utils.rs
graph-analysis-wasm/tests/: centrality_tests.rs  graph_operations_tests.rs  web.rs
graph-analysis-wasm/tests/common/: mod.rs
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: audit-release-bundle.mjs  check-i18n-keys.mjs  copy-to-vault.mjs  create-release.sh  esbuild.config.mjs  release.mjs
scripts/tests/: test-ai-model.mjs
src/: main.ts  styles.css
src/ai/: AI-insights.md  AISummaryManager.ts  DDC-template.json  KnowledgeDomainHelper.ts  KnowledgeEvolutionAnalysisManager.ts  KnowledgeStructureAnalysisManager.ts  MasterAnalysisManager.ts  README.md  VaultAnalysisManager.ts  VaultSemanticAnalysisManager.ts  index.ts  knowledge-domains.json  promptLanguage.ts
src/components/: GraphView.ts  index.ts
src/i18n/: index.ts
src/lib/: color-palette.ts
src/services/: AIContextPreparationService.ts  AIModelService.ts  GeminiRestClient.ts  PluginService.ts  VisualizationDerivationService.ts
src/settings/: GraphAnalysisSettingTab.ts
src/styles/: calendar-chart.css  domain-distribution.css  styles.css  theme.css
src/types/: color-palette.ts  plugin-cache-data.ts  (+1 more)
(+47 files in other folders)
