[package]
name = "graph-analysis-wasm"
version = "0.1.0"
authors = ["wluo <urbanscientist-wluo@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
petgraph = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wee_alloc = { version = "0.4.5", optional = true }
regex = "1.7.3"
lazy_static = "1.4.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
