[package]
name = "graph-analysis-wasm"
version = "0.1.0"
authors = ["wluo <urbanscientist-wluo@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wee_alloc = { version = "0.4.5", optional = true }
regex = "1.7.3"
once_cell = "1.18.0"
rustworkx-core = "0.16.0"
getrandom = { version = "0.2", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
approx = "0.5.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
